[package]
name = "barcode_binner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.3"
clap = { version = "4.0.26", features = ["derive"] }
clap_complete = "4.0.6"
jseqio = "0.1.3"
